@@ -1,10 +1,11 @@
 package com.finapp.javabackend.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.finapp.javabackend.dto.EdgeDTO;
 import com.finapp.javabackend.dto.GraphDTO;
 import com.finapp.javabackend.dto.NodeDTO;
-import com.finapp.javabackend.model.entity.NodeType;
 import com.finapp.javabackend.service.GraphService;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
@@ -13,13 +14,12 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.math.BigDecimal;
-import java.util.Collections;
+import java.util.List;
 
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(GraphController.class)
@@ -35,53 +35,41 @@ class GraphControllerTest {
     private GraphService graphService;
 
     @Test
-    void getGraphByProfileIdShouldReturnGraph() throws Exception {
-        GraphDTO mockGraph = new GraphDTO(1L, Collections.emptyList(), Collections.emptyList());
-        when(graphService.getUserGraphByProfileId(1L)).thenReturn(mockGraph);
+    @DisplayName("GET /api/v1/graph - Should return 200 OK with full graph DTO")
+    void getGraph_ShouldReturnGraphDTO() throws Exception {
+        // Arrange
+        NodeDTO node = new NodeDTO(1L, "Checking Account", "CHECKING", new BigDecimal("5000.00"), new BigDecimal("0.05"));
+        EdgeDTO edge = new EdgeDTO(1L, 1L, 2L, new BigDecimal("500.00"), BigDecimal.ZERO);
+        GraphDTO mockGraph = new GraphDTO(List.of(node), List.of(edge));
 
-        mockMvc.perform(get("/api/v1/graphs/profiles/1"))
+        when(graphService.getFullGraph()).thenReturn(mockGraph);
+
+        // Act & Assert
+        mockMvc.perform(get("/api/v1/graph"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.data.profileId").value(1));
+                .andExpect(jsonPath("$.message").value("Graph fetched successfully"))
+                .andExpect(jsonPath("$.data.nodes[0].name").value("Checking Account"))
+                .andExpect(jsonPath("$.data.nodes[0].nodeType").value("CHECKING"));
     }
 
     @Test
-    void addNodeShouldReturnCreatedNode() throws Exception {
-        NodeDTO inputNode = new NodeDTO(null, "Checking Account", NodeType.INCOME, new BigDecimal("5000.00"), BigDecimal.ZERO);
-        NodeDTO createdNode = new NodeDTO(10L, "Checking Account", NodeType.INCOME, new BigDecimal("5000.00"), BigDecimal.ZERO);
+    @DisplayName("POST /api/v1/graph - Should persist graph and return 200 OK")
+    void saveGraph_ShouldSaveAndReturnGraph() throws Exception {
+        // Arrange
+        NodeDTO node = new NodeDTO(null, "Salary Income", "INCOME", new BigDecimal("80000.00"), BigDecimal.ZERO);
+        GraphDTO inputGraph = new GraphDTO(List.of(node), List.of());
+        GraphDTO savedGraph = new GraphDTO(List.of(new NodeDTO(1L, "Salary Income", "INCOME", new BigDecimal("80000.00"), BigDecimal.ZERO)), List.of());
 
-        when(graphService.addNode(eq(1L), any(NodeDTO.class))).thenReturn(createdNode);
+        when(graphService.saveGraph(any(GraphDTO.class))).thenReturn(savedGraph);
 
-        mockMvc.perform(post("/api/v1/graphs/profiles/1/nodes")
+        // Act & Assert
+        mockMvc.perform(post("/api/v1/graph")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(inputNode)))
-                .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.data.id").value(10))
-                .andExpect(jsonPath("$.data.name").value("Checking Account"));
-    }
-
-    @Test
-    void updateNodeShouldReturnUpdatedNode() throws Exception {
-        NodeDTO updatePayload = new NodeDTO(10L, "Savings Account", NodeType.ASSET, new BigDecimal("8000.00"), new BigDecimal("0.045"));
-
-        when(graphService.updateNode(eq(10L), any(NodeDTO.class))).thenReturn(updatePayload);
-
-        mockMvc.perform(put("/api/v1/graphs/nodes/10")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(updatePayload)))
+                        .content(objectMapper.writeValueAsString(inputGraph)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.data.name").value("Savings Account"));
-    }
-
-    @Test
-    void deleteNodeShouldReturnSuccessMessage() throws Exception {
-        doNothing().when(graphService).deleteNode(10L);
-
-        mockMvc.perform(delete("/api/v1/graphs/nodes/10"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.message").value("Node deleted successfully"));
+                .andExpect(jsonPath("$.data.nodes[0].id").value(1))
+                .andExpect(jsonPath("$.data.nodes[0].name").value("Salary Income"));
     }
 }
